初始retrofit+rxjava：Get请求

--- a/retrofitrxjava/src/main/res/values/strings.xml
+++ b/retrofitrxjava/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RetrofitRxJava</string>
+    <string name="get_data">GET DATA</string>
+    <string name="wating_for_data">wating for data...</string>
 </resources>
